--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 08:05:04 2018</p>
+         Last Run: Sun Oct 28 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Rain</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>24</td>
-                        <td>48</td>
+                        <td>67</td>
+                        <td>47</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SSE</td>
-                        <td>93</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>4</td>
-                        <td>30</td>
-                        <td>46</td>
-                        <td>1</td>
-                        <td>14</td>
-                        <td>SSE</td>
-                        <td>79</td>
-                     </tr>
-                     <tr>
-                        <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>6</td>
-                        <td>3</td>
-                        <td>20</td>
-                        <td>52</td>
+                        <td>56</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SSE</td>
-                        <td>71</td>
+                        <td>77</td>
+                     </tr>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Chance of Rain</td>
+                        <td>8</td>
+                        <td>5</td>
+                        <td>31</td>
+                        <td>44</td>
+                        <td>1</td>
+                        <td>18</td>
+                        <td>SSE</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -108,7 +108,7 @@
                "data":[
                  "2",
                  "4",
-                 "3"
+                 "5"
                ]
              },
              {
@@ -119,7 +119,7 @@
                "data":[
                  "5",
                  "7",
-                 "6"
+                 "8"
                ]
              }
            ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "30",
-                 "20"
+                 "67",
+                 "56",
+                 "31"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
-                 "46",
-                 "52"
+                 "47",
+                 "45",
+                 "44"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "79",
-                 "71"
+                 "100",
+                 "77",
+                 "69"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 08:05:04 2018</p>
+         Last Run: Sun Oct 28 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -233,11 +233,11 @@
                         <td>10:00 AM</td>
                         <td>Overcast</td>
                         <td>0</td>
-                        <td>-3</td>
-                        <td>7</td>
-                        <td>86</td>
+                        <td>-2</td>
+                        <td>11</td>
+                        <td>87</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WNW</td>
                         <td>94</td>
                      </tr>
@@ -246,20 +246,20 @@
                         <td>Overcast</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>7</td>
+                        <td>10</td>
                         <td>81</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>92</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>17</td>
-                        <td>74</td>
+                        <td>18</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -307,7 +307,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-3",
                  "-2"
                ]
@@ -371,9 +371,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "17"
+                 "11",
+                 "10",
+                 "18"
                ]
              },
              {
@@ -381,9 +381,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
+                 "87",
                  "81",
-                 "74"
+                 "75"
                ]
              },
              {
@@ -392,7 +392,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "94",
-                 "92",
+                 "93",
                  "91"
                ]
              }
