--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 14:05:03 2018</p>
+         Last Run: Sun Oct 28 15:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Overcast</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>12</td>
-                        <td>87</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>23</td>
+                        <td>91</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>NW</td>
-                        <td>96</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Overcast</td>
+                        <td>-1</td>
+                        <td>-5</td>
+                        <td>22</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>-3</td>
                         <td>11</td>
-                        <td>80</td>
-                        <td>0</td>
-                        <td>10</td>
                         <td>NW</td>
-                        <td>95</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>10</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>94</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -106,9 +106,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
-                 "-3",
-                 "-2"
+                 "-6",
+                 "-5",
+                 "-3"
                ]
              },
              {
@@ -117,8 +117,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "-2",
                  "-1",
-                 "0",
                  "1"
                ]
              }
@@ -170,8 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
-                 "11",
+                 "23",
+                 "22",
                  "10"
                ]
              },
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
-                 "80",
-                 "73"
+                 "91",
+                 "82",
+                 "74"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "95",
-                 "94"
+                 "94",
+                 "93",
+                 "91"
                ]
              }
            ]
