--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 15:05:24 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
+         Last Run: Sun Oct 28 16:05:04 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -29,40 +29,40 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>10:00 AM</td>
-                        <td>Overcast</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>23</td>
-                        <td>91</td>
+                        <td>08:00 PM</td>
+                        <td>Clear</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>NNW</td>
-                        <td>94</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 AM</td>
-                        <td>Overcast</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>22</td>
-                        <td>82</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>NW</td>
-                        <td>93</td>
-                     </tr>
-                     <tr>
-                        <td>12:00 PM</td>
-                        <td>Overcast</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>10</td>
-                        <td>74</td>
+                        <td>53</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>NW</td>
-                        <td>91</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>29</td>
+                     </tr>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Clear</td>
+                        <td>2</td>
+                        <td>-1</td>
+                        <td>1</td>
+                        <td>56</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>24</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>1</td>
+                        <td>58</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,9 +95,9 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 AM",
-             "11:00 AM",
-             "12:00 PM"
+             "08:00 PM",
+             "09:00 PM",
+             "10:00 PM"
            ],
            "datasets":[
              {
@@ -106,9 +106,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-5",
-                 "-3"
+                 "0",
+                 "-1",
+                 "-2"
                ]
              },
              {
@@ -117,8 +117,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
-                 "-1",
+                 "3",
+                 "2",
                  "1"
                ]
              }
@@ -160,6 +160,206 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
+             "08:00 PM",
+             "09:00 PM",
+             "10:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "strokeColor":"rgba(0,0,255,1)",
+               "fillColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "1",
+                 "1",
+                 "1"
+               ]
+             },
+             {
+               "label":"humidity",
+               "strokeColor":"rgba(40,177,255,1)",
+               "fillColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "53",
+                 "56",
+                 "58"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "strokeColor":"rgba(233,37,255,1)",
+               "fillColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "29",
+                 "24",
+                 "23"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).BarAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Sun Oct 28 16:05:04 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>10:00 AM</td>
+                        <td>Overcast</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>23</td>
+                        <td>90</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>94</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 AM</td>
+                        <td>Overcast</td>
+                        <td>-1</td>
+                        <td>-5</td>
+                        <td>21</td>
+                        <td>83</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>93</td>
+                     </tr>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Overcast</td>
+                        <td>1</td>
+                        <td>-3</td>
+                        <td>10</td>
+                        <td>73</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>NW</td>
+                        <td>91</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator3"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator3" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Line.extend({
+         name: "LineAlt",
+         draw: function () {
+         Chart.types.Line.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Temp (C)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator3").getContext("2d");
+                  var data ={
+           "labels":[
+             "10:00 AM",
+             "11:00 AM",
+             "12:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "strokeColor":"rgba(92,0,141,1)",
+               "pointColor":"rgba(92,0,141,1)",
+               "fillColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-6",
+                 "-5",
+                 "-3"
+               ]
+             },
+             {
+               "label":"temperature",
+               "strokeColor":"rgba(252,49,18,1)",
+               "pointColor":"rgba(252,49,18,1)",
+               "fillColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-2",
+                 "-1",
+                 "1"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).LineAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator3").innerHTML=MyNewChart.generateLegend();
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator4"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator4" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Bar.extend({
+         name: "BarAlt",
+         draw: function () {
+         Chart.types.Bar.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Percentage (%)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator4").getContext("2d");
+                  var data ={
+           "labels":[
              "10:00 AM",
              "11:00 AM",
              "12:00 PM"
@@ -171,7 +371,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "23",
-                 "22",
+                 "21",
                  "10"
                ]
              },
@@ -180,9 +380,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "91",
-                 "82",
-                 "74"
+                 "90",
+                 "83",
+                 "73"
                ]
              },
              {
@@ -202,7 +402,7 @@
                     			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
                                    };
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
-                  document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
+                  document.getElementById("legend_chartHTMLReportGenerator4").innerHTML=MyNewChart.generateLegend();
                </script>
          <hr style="border-width:5px ">
       </div>
