--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 17:05:04 2018</p>
+         Last Run: Sun Oct 28 18:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -46,11 +46,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>25</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>25</td>
+                        <td>26</td>
                      </tr>
                   </tbody>
                </table>
@@ -181,8 +181,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "56",
-                 "58"
+                 "57",
+                 "59"
                ]
              },
              {
@@ -191,8 +191,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "29",
-                 "25",
-                 "25"
+                 "26",
+                 "26"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 17:05:04 2018</p>
+         Last Run: Sun Oct 28 18:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -230,39 +230,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>23</td>
                         <td>90</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>NNW</td>
-                        <td>94</td>
+                        <td>10</td>
+                        <td>NW</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>21</td>
-                        <td>83</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>NNW</td>
-                        <td>93</td>
+                        <td>NW</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
+                        <td>2</td>
+                        <td>-1</td>
+                        <td>9</td>
+                        <td>69</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>10</td>
-                        <td>73</td>
-                        <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>91</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,9 +306,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-5",
-                 "-3"
+                 "-4",
+                 "-4",
+                 "-1"
                ]
              },
              {
@@ -317,9 +317,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
                  "-1",
-                 "1"
+                 "0",
+                 "2"
                ]
              }
            ]
@@ -372,7 +372,7 @@
                "data":[
                  "23",
                  "21",
-                 "10"
+                 "9"
                ]
              },
              {
@@ -381,8 +381,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "90",
-                 "83",
-                 "73"
+                 "80",
+                 "69"
                ]
              },
              {
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "93",
-                 "91"
+                 "75",
+                 "77",
+                 "79"
                ]
              }
            ]
